<resources>
    <string name="app_name">Ticket Please</string>
    <string name="ajuda">Ajuda</string>
    <string name="part_rec">Esqueci a senha</string>
    <string name="registro">Não possui cadastro?</string>
    <string name="cadPartNome">Nome</string>
    <string name="cadPartCPF">CPF</string>
    <string name="cadPartEmail">Email</string>
    <string name="cadPartSenha">Senha</string>
    <string name="cadPartRepetirSenha">Repetir Senha</string>
    <string name="cadOrgNome">Nome da Empresa/Universidade</string>
    <string name="cadOrgEndereco">Endereço</string>
    <string name="cadOrgEmail">Email</string>
    <string name="cadOrgSenha">Senha</string>
    <string name="cadOrgRepetirSenha">Repetir Senha</string>
    <string name="homeOrgNovoEvento">Novo Evento</string>
    <string name="homeOrgListaEvento">Lista de Eventos</string>
    <string name="homePartBuscarEventos">Buscar Eventos</string>
    <string name="homePartMeusIngressos">Meus Ingressos</string>
    <string name="novoEventoNome">Nome do Evento</string>
    <string name="novoEventoLocal">Local do Evento</string>
    <string name="novoEventoData">Data do Evento</string>
    <string name="novoEventoHorario">Horário do Evento</string>
    <string name="novoEventoParticipantes">Máximo de Participantes</string>
</resources>